--- a/CSCI222_Assn2/CSCI222_Assn2/CSCI222_Assn2.vcxproj.filters
+++ b/CSCI222_Assn2/CSCI222_Assn2/CSCI222_Assn2.vcxproj.filters
@@ -21,9 +21,15 @@
     <ClInclude Include="MemberView.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="EditView.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="LoginView.resx">
+      <Filter>Resource Files</Filter>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MemberView.resx">
       <Filter>Resource Files</Filter>
     </EmbeddedResource>
   </ItemGroup>
@@ -32,6 +38,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="MemberView.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="EditView.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
