Updated C++ Linker with correct subsystem + entry

--- a/CSCI222_Assn2/CSCI222_Assn2/CSCI222_Assn2.vcxproj.filters
+++ b/CSCI222_Assn2/CSCI222_Assn2/CSCI222_Assn2.vcxproj.filters
@@ -32,6 +32,9 @@
     <EmbeddedResource Include="MemberView.resx">
       <Filter>Resource Files</Filter>
     </EmbeddedResource>
+    <EmbeddedResource Include="EditView.resx">
+      <Filter>Resource Files</Filter>
+    </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="LoginView.cpp">
